# pc1-pareja12

./: CMakeLists.txt  README.md  actividad1_semana1.md
bench/: benchmark.cpp
reports/: coverage_report.md  optimization_report.md  profiling_report.md
src/: main.cpp  solution.cpp  solution.hpp
tests/: tests.cpp
